# Pd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  test.pd
externals_test/: dcanvas_test.pd  pitch_test.pd
lib/: CMakeLists.txt  implementation.cpp  main.c  main.cpp  mniak.cpp  mniak.h  module.modulemap  test.c
lib/prebuilt/: std.pcm
plugin/: CMakeLists.txt  PitchClass.cpp  PitchClass.h  gui.cpp  libmus.cpp  mniak.cpp  mytgl.c
